# libibt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: check.yml  publish.yml  pyodide.yml
crates/libibt/: Cargo.toml
crates/libibt-python/: Cargo.toml
crates/libibt-python/src/: lib.rs
crates/libibt/src/: channel.rs  error.rs  header.rs  lib.rs  reader.rs  var_header.rs
reference/: ibt_parser.py
rust/src/: channel.rs  error.rs  header.rs  lib.rs  reader.rs  session_info.rs  var_header.rs
scripts/: run_pyodide_tests.mjs  run_pyodide_tests_idbfs.mjs
scripts/pyodide_tests/: run_unit_tests.py  test_bytes_input.py
src/libibt/: __init__.py  _libibt_rs.pyi  base.py
tests/: conftest.py  test_channel_metadata.py  test_channels.py  test_cross_validation.py  test_logfile.py  test_parse.py  test_reference.py
tests/test_data/: test.ibt
