[package]
name = "libibt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "_libibt_rs"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
arrow = { version = "57", default-features = false, features = ["pyarrow"] }
memmap2 = "0.9"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
